--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -37,3 +37,13 @@
     display: flex;
     align-items: center;
 }
+
+.setParameters {
+    background-color: rgb(184, 184, 184);
+    padding: 40px;
+    border-radius: 10px;
+}
+
+.setParameters label {
+    padding: 30px;
+}
