--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -70,7 +70,6 @@
   }
   
   body {
-    max-width: 37.5rem;
     margin: 0 auto;
     padding: 0 1.25rem;
     font-family: 'Lato', sans-serif;
@@ -115,7 +114,8 @@
   .carousel__viewport {
     width: 800px;
     height: 600px;
-    position: absolute;
+    position: relative;
+    margin: 80px auto;
     top: 0;
     right: 0;
     bottom: 0;
@@ -205,16 +205,6 @@
     border-radius: 50%;
     font-size: 0;
     transition: transform 0.1s;
-  }
-  
-  .carousel::before,
-  .carousel__prev {
-    left: -1rem;
-  }
-  
-  .carousel::after,
-  .carousel__next {
-    right: -1rem;
   }
   
   .carousel::before,
