--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -131,12 +131,12 @@
     position: relative;
     flex: 0 0 100%;
     width: 100%;
-    background-color: #f99;
+    background-color: #3E065F;
     counter-increment: item;
   }
   
   .carousel__slide:nth-child(even) {
-    background-color: #99f;
+    background-color: #04293A;
   }
   
   .carousel__slide:before {
