Creadas migraciones de las tablas para partidas demo y añadido boton de jugar como invitado

--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -25,6 +25,10 @@
   border-radius: 5px;
 }
 
+.demo-button {
+  background-color: grey;
+}
+
 .button:hover {
   background-color: #0e3875;
   color: rgb(201, 201, 201);
