--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -1,4 +1,4 @@
-*{
+body{
   background-color: #141414;
 }
 
@@ -56,6 +56,10 @@
 .button:hover {
   background-color: #0e3875;
   color: rgb(201, 201, 201);
+}
+
+.demo-button:hover {
+  background-color: rgb(51, 51, 51);
 }
 
 .login-button {
