--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -1,7 +1,3 @@
-body{
-  background-color: #141414;
-}
-
 .login-page{
   width: 80%;
   display: flex;
@@ -27,8 +23,12 @@ body{
   margin: 0;
 }
 
-.fondo {
+.background {
   background-image: url(/img/fondo.png);
+}
+
+.containterStadistics {
+  background-color: #3d3d3d;
 }
 
 .blanco {
@@ -242,4 +242,12 @@ Fin Carrousel
   background-color: grey;
   padding: 15px;
   border-radius: 40%;
+}
+
+.nQuestion {
+  
+}
+
+.nCurQuestion {
+  background-color: green;
 }
