--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -39,8 +39,39 @@ body{
   background-color: #4A2966;
 }
 
+.signup-form-form{
+  width: 25%;
+  height: 20%;
+  padding: 10px;
+  background-color: #003052;
+  border-radius: 4px 0 0 4px;
+  padding-left: 5%;
+}
+
+.signup-form-text{
+  width: 25%;
+  height: 20%;
+  padding: 10px;
+  border-radius: 0 4px 4px 0;
+  text-align: center;
+  color:#d6efff ;
+  background-color: #4A2966;
+}
+
+.signup-form-text h1{
+  color: #d6efff;
+}
+
 .login-form-text h1{
   color: #d6efff;
+}
+
+.signup-page{
+  width: 80%;
+  display: inline-flexbox;
+  align-items: center;
+  justify-content: center;
+  margin-left: 10%; 
 }
 
 .button-router{
