--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -43,6 +43,41 @@ body {
   color: #d6efff;
 }
 
+.signup-form-form{
+  width: 25%;
+  height: 20%;
+  padding: 10px;
+  background-color: #003052;
+  border-radius: 4px 0 0 4px;
+  padding-left: 5%;
+}
+
+.signup-form-text{
+  width: 25%;
+  height: 20%;
+  padding: 10px;
+  border-radius: 0 4px 4px 0;
+  text-align: center;
+  color:#d6efff ;
+  background-color: #4A2966;
+}
+
+.signup-form-text h1{
+  color: #d6efff;
+}
+
+.login-form-text h1{
+  color: #d6efff;
+}
+
+.signup-page{
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 10%; 
+}
+
 .button-router {
   background-color: #3660a000;
   border: 1px solid;
@@ -317,7 +352,7 @@ Fin Carrousel
   font-size: 35px;
   background-color: grey;
   padding: 15px;
-  border-radius: 40%;
+  border-radius: 4px;
 }
 
 .nQuestionContainer {
