--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -43,7 +43,7 @@ body {
   color: #d6efff;
 }
 
-.signup-form-form{
+.signup-form-form {
   width: 25%;
   height: 20%;
   padding: 10px;
@@ -52,30 +52,30 @@ body {
   padding-left: 5%;
 }
 
-.signup-form-text{
+.signup-form-text {
   width: 25%;
   height: 20%;
   padding: 10px;
   border-radius: 0 4px 4px 0;
   text-align: center;
-  color:#d6efff ;
+  color: #d6efff;
   background-color: #4A2966;
 }
 
-.signup-form-text h1{
+.signup-form-text h1 {
   color: #d6efff;
 }
 
-.login-form-text h1{
+.login-form-text h1 {
   color: #d6efff;
 }
 
-.signup-page{
+.signup-page {
   width: 80%;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 10%; 
+  margin-left: 10%;
 }
 
 .button-router {
@@ -122,8 +122,19 @@ body {
   background-color: #3d3d3d;
 }
 
+@media (min-width: 750px) {
+  .title-landing {
+    font-size: 95px;
+  }
+}
+
+@media (max-width: 750px) {
+  .title-landing {
+    font-size: 75px;
+  }
+}
+
 .title-landing {
-  font-size: 95px;
   color: #d6efff;
 }
 
@@ -376,4 +387,3 @@ span {
   text-decoration: none;
   display: fit-content;
 }
-
