--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -291,8 +291,9 @@ body {
 
 .user {
   color: white;
-  float: right;
-  margin: 25px;
+  position: absolute;
+  top: 20px;
+  right: 20px;
 }
 
 /*
