--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -294,6 +294,12 @@ body {
   position: absolute;
   top: 20px;
   right: 20px;
+  text-align: center;
+}
+
+.user:hover {
+  filter: brightness(0.8);
+  color: white;
 }
 
 /*
