--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -191,13 +191,13 @@ body {
 }
 
 /*Pagina seleccio dificultad i categoria*/
-.categories label :last-child{
+/* .categories {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(2, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
-}
+} */
 
 input[name='categories'] {
   display: none;
