--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -432,3 +432,15 @@ span {
 	height: 50px;
   padding: 15px;
 }
+
+.timer {
+  display: inline-block;
+  padding: 24px 32px;
+  border-radius: 30px;
+  background: white;
+}
+
+.timer_part {
+  font-size: 36px;
+  font-weight: bold;
+}
