--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -434,13 +434,22 @@ span {
 }
 
 .timer {
-  display: inline-block;
-  padding: 24px 32px;
-  border-radius: 30px;
-  background: white;
+  margin-top: 1%;
+  padding: 12px 16px;
+  border-radius: 20px;
+  background-image: linear-gradient(#3660a0,#4A2966 );
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .timer_part {
-  font-size: 36px;
   font-weight: bold;
+  align-items: center;
+  justify-content: center;
+}
+
+.home-button {
+  margin-top: 1%;
+  margin-bottom: 0;
 }
