--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -435,8 +435,10 @@ span {
 
 .timer {
   margin-top: 1%;
+  margin-left: 0.7%;
+  margin-right: 0.7%;
   padding: 12px 16px;
-  border-radius: 20px;
+  border-radius: 18px;
   background-image: linear-gradient(#3660a0,#4A2966 );
   display: flex;
   align-items: center;
@@ -451,5 +453,6 @@ span {
 
 .home-button {
   margin-top: 1%;
+  margin-left: 0.7%;
   margin-bottom: 0;
 }
