--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -466,12 +466,16 @@ span {
 }
 
 .timer {
-  margin-top: 1%;
-  margin-left: 0.7%;
-  margin-right: 0.7%;
+  width: 100px;
+  height: 100px;
   padding: 12px 16px;
   border-radius: 18px;
   background-image: linear-gradient(#3660a0,#4A2966 );
+  position: absolute;
+  top: 20px;
+  left: 0;
+  right: 0;
+  margin: auto;
   display: flex;
   align-items: center;
   justify-content: center;
