--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -759,7 +759,8 @@ audio {
 table.ranking-table {
   border: 4px solid #555555;
   background-color: #555555;
-  width: 400px;
+  width: 90vw;
+  max-width: 400px;
   text-align: center;
   border-collapse: collapse;
   color: white;
