--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -840,3 +840,18 @@ table.ranking-table tfoot .links a {
   padding: 2px 8px;
   border-radius: 5px;
 }
+
+.footer {
+  text-align: center;
+  height: 50px;
+  width: 100%;
+  color: white;
+  background-color: #353535;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer p {
+  margin: 0;
+}
