--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -713,9 +713,7 @@ audio {
 }
 
 .profile-content {
-  width: 55%;
   height: fit-content;
-  display: flex;
   align-items: center;
   justify-content: center;
   background-color: #4A2966;
@@ -730,7 +728,7 @@ audio {
   border-radius: 4px;
   text-align: center;
   color: #d6efff;
-  display: flex;
+  /* display: flex; */
   align-items: center;
   justify-content: center;
 }
@@ -742,6 +740,7 @@ audio {
 
 .profile-data h2 {
   color: #d6efff;
+  width: fit-content;
 }
 
 .profile-data svg {
@@ -871,20 +870,6 @@ table.ranking-table tfoot .links a {
   color: #646262;
 }
 
-.audioControls{
-  margin-bottom: 2px;
-}
-
-.mute-btn{
-  width: 70px;
-  height: 70px;
-}
-.play-btn{
-  width: 70px;
-  height: 70px;
-  background-color: #707070;
-  border-radius: 60px;
-}
 .footer {
   text-align: center;
   height: 50px;
