--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -707,6 +707,22 @@ audio {
   display: none;
 }
 
+@media (max-width: 1300px) {
+
+}
+
+@media (max-width: 800px) {
+  .profile-page{
+    width: 90vh;
+  }
+
+  .profile-content{
+    width: 50vh;
+    margin: auto;
+  }
+}
+
+
 .profile-page {
   width: 100%;
   height: 100vh;
