--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -742,6 +742,7 @@ audio {
 }
 
 .profile-data {
+  margin: auto;
   width: 50%;
   padding: 25px;
   border-radius: 4px;
@@ -750,6 +751,14 @@ audio {
   /* display: flex; */
   align-items: center;
   justify-content: center;
+}
+
+#profile-table {
+  margin: auto;
+}
+
+.maxScore{
+  margin:auto;
 }
 
 .profile-data h1 {
