responsive route de finishgame

--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -842,7 +842,9 @@ audio {
 }
 
 @media (max-width: 750px) {
-
+  .finish-content {
+    margin-top: 35%;
+  }
   .div-ranking-table,
   .gameOfTheDay {
     overflow: scroll;
