--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -739,7 +739,7 @@ audio {
   }
 
   .profile-content{
-    width: 50vh;
+    /* width: 50vh; */
     margin: auto;
   }
 }
@@ -754,6 +754,7 @@ audio {
 }
 
 .profile-content {
+  width: 35%;
   height: fit-content;
   align-items: center;
   justify-content: center;
@@ -777,6 +778,10 @@ audio {
 
 #profile-table {
   margin: auto;
+}
+
+.table-responsive{
+  width: 100%;
 }
 
 .maxScore{
@@ -867,6 +872,16 @@ audio {
   .finish-content {
     margin-top: 35%;
   }
+  .table-responsive {
+    width: 100%;
+  }
+  .profile-content {
+    /* margin-left: 19%; */
+    width: 90%;
+  }
+  #profile-table {
+    width: 100%;
+  }
   .setParameters{
     margin: 1%;
     margin-top: 58%;
@@ -875,6 +890,11 @@ audio {
   .gameOfTheDay {
     overflow: scroll;
   }
+}
+
+.logout-btn{
+  margin-left: 43%;
+  margin-top: 1%;
 }
 
 @media (min-width: 900px) {
