categorys responsive y profilr acabado

--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -379,6 +379,16 @@ input[name='difficulty'] {
   align-items: center;
 }
 
+@media (max-width: 750px) {
+  .play {
+    height: fit-content;
+    min-height: 100vh;
+  }
+  .btn-group-toggle {
+    margin: 2%;
+  }
+}
+
 .setParameters {
   background-color: rgb(184, 184, 184);
   padding: 40px;
@@ -883,7 +893,6 @@ audio {
   }
   .setParameters{
     margin: 1%;
-    margin-top: 58%;
   }
   .div-ranking-table,
   .gameOfTheDay {
@@ -902,6 +911,11 @@ audio {
 .logout-btn{
   margin-left: 43%;
   margin-top: 1%;
+}
+
+.table-container{
+  height: 400px;
+  overflow: scroll;
 }
 
 @media (min-width: 900px) {
