--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -270,6 +270,11 @@ body {
   grid-row-gap: 0px;
 } */
 
+  .home-button-play{
+    margin: auto;
+  }
+}
+
 input[name='categories'] {
   display: none;
 }
@@ -746,7 +751,7 @@ audio {
 
 .profile-page {
   width: 100%;
-  height: 100vh;
+  height: fit-content ;
   display: flex;
   align-items: center;
   justify-content: center;
