--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -761,7 +761,7 @@ audio {
 
 .profile-page {
   width: 100%;
-  height: 100vh ;
+  min-height: 100vh ;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -858,6 +858,27 @@ audio {
   font-size: 100px;
 }
 
+@media (max-width: 750px) {
+  .finish-content{
+    width: 100%;
+    display: block;
+  }
+  
+  .challengeContainer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .challengeContainer table {
+    margin: auto;
+  }
+
+  .challengeContainer h1 {
+    text-align: center;
+    margin: 15px;
+  }
+}
 .ranking {
   margin-left: 10vw;
   margin-right: 10vw;
